# moonlight

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  vk_layer_settings.txt
data/: heightmap.exr~  simple_heightmap.exr
data/models/: animated_fox.glb  animated_test.glb  diamond.glb  ground_plane.glb  low_poly_fox.glb  maple_tree.gltf
data/scripts/: main.lua  typedef.lua
engine/: Cargo.toml  build.rs
engine/benches/: ecs.rs
engine/src/: animations.rs  components.rs  core.rs  ecs.rs  layouts.rs  lib.rs  lua.rs  physics.rs  renderer.rs  resources.rs  ubo.rs  vulkan.rs
engine/src/renderer/: draw.rs  init.rs  mod.rs  pipelines.rs  resources.rs
engine/src/renderer/swapchain/: framebuffers.rs  mod.rs  renderpass.rs
engine/src/renderers/ui/: mod.rs
engine/src/renderers/world/: descriptors.rs  draw.rs  mod.rs  pipelines.rs  rendergraph.rs
engine/src/renderers/world/swapchain/: framebuffers.rs  image_attachments.rs  mod.rs  renderpass.rs
engine/src/shaders/: ambient.frag.glsl  ambient_frag.glsl  ambient_vert.glsl  animated_geometry_vert.glsl  cascade_integration.frag.glsl  clipped_geometry.frag.glsl  clipped_geometry_frag.glsl  compute_cascade.comp.glsl  compute_cascade_comp.glsl  deferred_frag.glsl  deferred_vert.glsl  directional_frag.glsl  directional_vert.glsl  egui.frag.glsl  egui.vert.glsl  geometry_frag.glsl  invert_color_comp.glsl  point.frag.glsl  point_frag.glsl  point_vert.glsl  skybox.vert.glsl  skybox_frag.glsl  skybox_vert.glsl  static_geometry.vert.glsl  terrain_frag.glsl  terrain_vert.glsl  tonemap.frag.glsl
game/: Cargo.toml
game/src/: lib.rs  main.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
shaders/: fragment.glsl  vertex.glsl
src/: app.rs  ecs.rs  lib.rs  main.rs  model.rs  models.rs  physics.rs  renderer.rs  resources.rs  vulkan.rs
src/engine/: components.rs  renderer.rs
src/renderer/: shaders.rs
src/shaders/: ambient.frag  ambient.vert  ambient_frag.glsl  defered_vert.glsl  directional_frag.glsl  directionalfrag.glsl  directionalvert.glsl  lighting_frag.glsl  lighting_vert.glsl  point_frag.glsl
