[package]
name = "moonlight"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.20.0"
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
vulkano = "0.34.0"
winit = { version = "0.30.5", features = ["rwh_04", "rwh_05"] }
[dependencies.vulkano-shaders]
version = "0.34"  # or your version
features = ["shaderc-debug"]

# Cargo.toml
[profile.dev]
codegen-units = 16  # Faster compile times for development
