[package]
name = "moonlight"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
thiserror = "2.0.12"
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
image = "0.25.6"
winit = { version = "0.30.11", features = ["rwh_06"] }
ash = "0.38.0"
ash-window = "0.13.0"
gpu-allocator = "0.27.0"
half = { version = "2.6.0", features = ["bytemuck"] }
gltf = "1.4.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
shaderc = "0.9.1"
walkdir = "2"

[[bench]]
name = "ecs"
harness = false
