[package]
name = "moonlight"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
thiserror = "2.0.12"
ultraviolet = { version = "0.10.0", features = ["bytemuck"] }
image = "0.25.6"
winit = { version = "0.30.11", features = ["rwh_06"] }
ash = "0.38.0"
ash-window = "0.13.0"
gpu-allocator = "0.28.0"
gltf = {version = "1.4.1", features = ["KHR_texture_transform"] } 
rspirv-reflect = "0.9.0"
egui = "0.33.0"
egui-winit = "0.33.0"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
paste = "1.0.15"
inventory = "0.3.22"
proc-macros = { path = "../proc-macros", features = ["internal"] }
educe = "0.6.0"
tracing = "0.1.44"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
walkdir = "2"

[[bench]]
name = "ecs"
harness = false

[features]
internal = []
