[package]
name = "corruption"
version = "0.1.0"
edition = "2021"

[dependencies]
moonlight = { path = "../engine" }
bytemuck = "1.20.0"
obj-rs = "0.7.4"
thiserror = "2.0.12"
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
vulkano = "0.34.0"
image = "0.25.6"
winit = { version = "0.30.5", features = ["rwh_04", "rwh_05"] }
[dependencies.vulkano-shaders]
version = "0.34"  # or your version
features = ["shaderc-debug"]
