[package]
name = "corruption"
version = "0.1.0"
edition = "2021"

[dependencies]
moonlight = { path = "../engine" }
bytemuck = "1.20.0"
thiserror = "2.0.12"
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
image = "0.25.6"
winit = { version = "0.30.5", features = ["rwh_04", "rwh_05"] }
half = { version = "2.6.0", features = ["bytemuck"] }
gltf = "1.4.1"
